attempt to fix input zoom on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@ input {
   border: 1px solid rgb(170, 175, 176);
   padding: 5px 10px;
   margin: 5px;
+  font-size: 16px;
 }
 
 a {
